tests/NormalTests/paczka1/fuzzy1/94402486.err
Error in line 10: A110 A461 338,0
Error in line 12: A110 A861 34,2
Error in line 17: XEXWTtGNCOn A861 75,2
Error in line 15: A110 A461 0,5
Error in line 23: FEiy35 S458 99,2
Error in line 20: A110 A861 60,8
Error in line 37: XEXWTtGNCOn A861 98,0
